via the `query` option:

    [php]
    $filter = new ArticleFormFilter(array(), array(
      'query' => $table->createQuery()->select('title, body'),
    ));

The table method specified via `->setTableMethod()` (or now via the
`table_method` option), is no longer required to return a query object. Any of
the following are valid `sfFormFilterDoctrine` table methods:

    [php]
    // works in symfony >= 1.2
    public function getQuery()
    {
      return $this->createQuery()->select('title, body');
    }

    // works in symfony >= 1.2
    public function filterQuery(Doctrine_Query $query)
    {
      return $query->select('title, body');
    }

    // works in symfony >= 1.3
    public function modifyQuery(Doctrine_Query $query)
    {
      $query->select('title, body');
    }

Web Debug Toolbar
-----------------

### `sfWebDebugPanel::setStatus()`

Each panel in the web debug toolbar can specify a status that will affect its
title's background color. For example, the background color of the log panel's
title changes if any messages with a priority greater than `sfLogger::INFO`
are logged.

### `sfWebDebugPanel` request parameter

You can now specify a panel to be open on page load by appending a
`sfWebDebugPanel` parameter to the URL. For example, appending
`?sfWebDebugPanel=config` would cause the web debug toolbar to render with the
config panel open.

Panels can also inspect request parameters by accessing the web debug
`request_parameters` option:

    [php]
    $requestParameters = $this->webDebug->getOption('request_parameters');

Partials
--------

### Slots improvements

The `get_slot()` and `include_slot()` helpers now accept a second parameter for 
specifying the default slot content to return if none is provided by the slot:

    [php]
    <?php echo get_slot('foo', 'bar') // will output 'bar' if slot 'foo' is not defined ?>
    <?php include_slot('foo', 'bar') // will output 'bar' if slot 'foo' is not defined ?>